Fix projects looking bad on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,7 +99,3 @@ h2 {
 .logoImage {
     text-align: right;
 }
-
-.projectContent {
-    text-align: center;  
-}
